# pixi-assistant

./: .gitignore  Cargo.toml  LICENSE  README.md  pixi.toml
src/: main.rs
