[package]
name = "pixi-assistant"
description = "A command-line assistant for helping with pixi projects."
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
